--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
           </div>
         </div>
         <div class="slide swiper-slide">
-          <img src="images/Mansmiling.jpeg" alt="" class="image" />
+          <img src="Images/Mansmiling.jpeg" alt="" class="image" />
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam,
             saepe provident dolorem a quaerat quo error facere nihil deleniti
@@ -197,7 +197,7 @@
           </div>
         </div>
         <div class="slide swiper-slide">
-          <img src="images/Mansmilingalso.jpeg" alt="" class="image" />
+          <img src="Images/Mansmilingalso.jpeg" alt="" class="image" />
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam,
             saepe provident dolorem a quaerat quo error facere nihil deleniti
